[package]
name = "website"
version = "0.1.0"
authors = ["addonovan <austin@addonovan.com>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
mwf = { git = "https://github.com/addonovan/mwf.git" }
regex = "0.2"
lazy_static = "1.0"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
